--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -134,6 +134,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\GiaoHangController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\KeToanController.cs" />
     <Compile Include="Controllers\KhachHangController.cs" />
     <Compile Include="Controllers\KinhDoanhController.cs" />
     <Compile Include="Controllers\LoginUserController.cs" />
@@ -276,6 +277,7 @@
     <Content Include="Content\js\plugins\select2.min.js" />
     <Content Include="Content\js\plugins\sweetalert.min.js" />
     <Content Include="Content\js\popper.min.js" />
+    <Content Include="Content\QLHoadon.css" />
     <Content Include="Content\soft-ui-dashboard.css" />
     <Content Include="Content\Test01\all.min.css" />
     <Content Include="Content\Test01\main.css" />
@@ -473,6 +475,13 @@
     <Content Include="Views\PhongKho\XuatKho.cshtml" />
     <Content Include="Views\KhachHang\Layout\_LayoutKhachHang.cshtml" />
     <Content Include="Views\KhachHang\PageSanPham.cshtml" />
+    <Content Include="Views\KeToan\CreateCongno.cshtml" />
+    <Content Include="Views\KeToan\Doanhthu.cshtml" />
+    <Content Include="Views\KeToan\LoiNhuan.cshtml" />
+    <Content Include="Views\KeToan\QLCongno.cshtml" />
+    <Content Include="Views\KeToan\QLHoaDon.cshtml" />
+    <Content Include="Views\KeToan\TrangChuKeToan.cshtml" />
+    <Content Include="Views\KeToan\Layout\_LayoutPageKeToan.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
