--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -255,11 +255,22 @@
     <Content Include="Content\fonts\font-awesome-4.7.0\css\font-awesome.min.css" />
     <Content Include="Content\fonts\font-awesome-4.7.0\fonts\fontawesome-webfont.svg" />
     <Content Include="Content\fonts\font-awesome-4.7.0\HELP-US-OUT.txt" />
+    <Content Include="Content\images\backgroungteam.png" />
     <Content Include="Content\images\customerApp.png" />
     <Content Include="Content\images\fg-img.png" />
     <Content Include="Content\images\hay.jpg" />
     <Content Include="Content\images\team.jpg" />
     <Content Include="Content\Img\135017829_1026004181228801_2637032699560275_n.jpg" />
+    <Content Include="Content\Img\account.png" />
+    <Content Include="Content\Img\DiemKhang.jpg" />
+    <Content Include="Content\Img\SanPham\7up.jpg" />
+    <Content Include="Content\Img\SanPham\coca.png" />
+    <Content Include="Content\Img\SanPham\cocalight.jpg" />
+    <Content Include="Content\Img\SanPham\pepsi.jpg" />
+    <Content Include="Content\Img\SanPham\pepsi0calo.jpg" />
+    <Content Include="Content\Img\SanPham\sting.jpg" />
+    <Content Include="Content\Img\SanPham\stingVang.jpg" />
+    <Content Include="Content\images\teamwork-la-gi-3.jpg" />
     <Content Include="Content\js\bootstrap.min.js" />
     <Content Include="Content\js\jquery-3.2.1.min.js" />
     <Content Include="Content\js\main.js" />
