--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -524,6 +524,7 @@
     <Content Include="Views\ChiTietDonHangs\Edit.cshtml" />
     <Content Include="Views\ChiTietDonHangs\Index.cshtml" />
     <Content Include="Views\KinhDoanh\ThemCTHD.cshtml" />
+    <Content Include="Views\KinhDoanh\ChinhSuaCTDH.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
