--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -543,6 +543,7 @@
     <Content Include="Views\QTV\ThemNV.cshtml" />
     <Content Include="Views\QTV\ChinhsuaNV.cshtml" />
     <Content Include="Views\KeToan\XuatHDBH.cshtml" />
+    <Content Include="Views\KeToan\ChinhsuaHD.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
