--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -544,6 +544,7 @@
     <Content Include="Views\QTV\ChinhsuaNV.cshtml" />
     <Content Include="Views\KeToan\XuatHDBH.cshtml" />
     <Content Include="Views\KeToan\ChinhsuaHD.cshtml" />
+    <Content Include="Views\KeToan\CongnoDL.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
