--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -128,6 +128,8 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\BienBangKiemKesController.cs" />
+    <Compile Include="Controllers\ChiTietBienBangsController.cs" />
     <Compile Include="Controllers\ChiTietDonHangsController.cs" />
     <Compile Include="Controllers\ChiTietKhoesController.cs" />
     <Compile Include="Controllers\DonHangsController.cs" />
@@ -137,6 +139,7 @@
     <Compile Include="Controllers\KhachHangController.cs" />
     <Compile Include="Controllers\KinhDoanhController.cs" />
     <Compile Include="Controllers\LoginUserController.cs" />
+    <Compile Include="Controllers\PhieuNhapXuatsController.cs" />
     <Compile Include="Controllers\PhongKhoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -199,6 +202,9 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\PhieuCongNo.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\PhieuNhapXuat.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\SanPham.cs">
@@ -550,6 +556,25 @@
     <Content Include="Views\PhongKho\CreateCTKho.cshtml" />
     <Content Include="Views\PhongKho\EditCTKho.cshtml" />
     <Content Include="Views\PhongKho\DeleteCTKho.cshtml" />
+    <Content Include="Views\BienBangKiemKes\Create.cshtml" />
+    <Content Include="Views\BienBangKiemKes\Delete.cshtml" />
+    <Content Include="Views\BienBangKiemKes\Details.cshtml" />
+    <Content Include="Views\BienBangKiemKes\Edit.cshtml" />
+    <Content Include="Views\BienBangKiemKes\Index.cshtml" />
+    <Content Include="Views\PhongKho\CreateBBKK.cshtml" />
+    <Content Include="Views\ChiTietBienBangs\Create.cshtml" />
+    <Content Include="Views\ChiTietBienBangs\Delete.cshtml" />
+    <Content Include="Views\ChiTietBienBangs\Details.cshtml" />
+    <Content Include="Views\ChiTietBienBangs\Edit.cshtml" />
+    <Content Include="Views\ChiTietBienBangs\Index.cshtml" />
+    <Content Include="Views\PhongKho\CreateCTBBKK.cshtml" />
+    <Content Include="Views\PhongKho\DeleteBBKK.cshtml" />
+    <Content Include="Views\PhongKho\DetailsBB.cshtml" />
+    <Content Include="Views\PhieuNhapXuats\Create.cshtml" />
+    <Content Include="Views\PhieuNhapXuats\Delete.cshtml" />
+    <Content Include="Views\PhieuNhapXuats\Details.cshtml" />
+    <Content Include="Views\PhieuNhapXuats\Edit.cshtml" />
+    <Content Include="Views\PhieuNhapXuats\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
