--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -200,6 +200,9 @@
     <Compile Include="Models\PhieuCongNo.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\PhieuNhapXuat.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\SanPham.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
