update KH + print 5/12

--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -452,11 +452,13 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Scripts\dataTables.bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.dataTables.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -556,6 +558,26 @@
     <Content Include="Views\KeToan\Doanhthu.cshtml" />
     <Content Include="Views\KeToan\XuatCN.cshtml" />
     <Content Include="Views\KeToan\ThemCongno.cshtml" />
+    <Content Include="Views\KhachHang\DeleteDH.cshtml" />
+    <Content Include="Views\KhachHang\DetailsDH.cshtml" />
+    <Content Include="Views\KhachHang\DonHangDL.cshtml" />
+    <Content Include="Views\PhongKho\ChinhSuaKho.cshtml" />
+    <Content Include="Views\PhongKho\ChiTietKho.cshtml" />
+    <Content Include="Views\PhongKho\ChiTietPhieuNhapKho.cshtml" />
+    <Content Include="Views\PhongKho\ChiTietPhieuXuatKho.cshtml" />
+    <Content Include="Views\PhongKho\CreateBBKK.cshtml" />
+    <Content Include="Views\PhongKho\CreateCTBBKK.cshtml" />
+    <Content Include="Views\PhongKho\CreateCTKho.cshtml" />
+    <Content Include="Views\PhongKho\CreatePhieuNhapXuat.cshtml" />
+    <Content Include="Views\PhongKho\DeleteBBKK.cshtml" />
+    <Content Include="Views\PhongKho\DeleteCTKho.cshtml" />
+    <Content Include="Views\PhongKho\DetailsBB.cshtml" />
+    <Content Include="Views\PhongKho\EditCTKho.cshtml" />
+    <Content Include="Views\PhongKho\QuanLyKho.cshtml" />
+    <Content Include="Views\PhongKho\Themkho.cshtml" />
+    <Content Include="Views\PhongKho\XoaKho.cshtml" />
+    <Content Include="Views\PhongKho\XoaPhieuNhapKho.cshtml" />
+    <Content Include="Views\PhongKho\XoaPhieuXuatKho.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
