--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -128,6 +128,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\AdminAuthorize.cs" />
     <Compile Include="App_Start\Authentication.cs" />
     <Compile Include="App_Start\AuthenticationDL.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
