Update CSDL bo sung NhapXuat (15/02/2023)

--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -164,6 +164,9 @@
     <Compile Include="Models\ChiTietKho.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ChiTietPhieuNhapXuat.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\ChucVu.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
